--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,4 +1,4 @@
-		<%- include('partials/_header.ejs') -%>
+<%- include('partials/_header.ejs') -%>
 <body>
 	<div class="tm-page-wrap mx-auto">
 		<div class="position-relative">
@@ -13,7 +13,7 @@
 					<div class="row mt-3 mb-5 pb-3">
 						<div class="col-12">
 							<div class="mx-auto tm-about-text-container px-3">
-								<h2 class="tm-page-title mb-4 tm-text-primary">Add Photo</h2>
+								<h2 class="tm-page-title mb-4 tm-text-primary">Edit the Photo</h2>
                 
 							</div>							
 						</div>						
@@ -23,21 +23,18 @@
                             <div class="col-lg-12 mb-5">
 
 
-                                <form action="/photos" method="POST" enctype="multipart/form-data" class="tm-contact-form">
+                                <form action="/photos/<%= photo._id %>?_method=PUT" method="POST" enctype="multipart/form-data" class="tm-contact-form">
                                   <div class="form-group">
-                                    <input type="text" name="title" class="form-control rounded-0" placeholder="Photo Title" required="" />
+                                    <input type="text" name="title" value="<%=photo.title%>" class="form-control rounded-0" placeholder="Photo Title" required="" />
                                   </div>
                                   <div class="form-group">
-                                    <textarea rows="8" name="description" class="form-control rounded-0" placeholder="Description"
+                                    <textarea rows="8" name="description" class="form-control rounded-0" placeholder="<%= photo.description %>"
                                               required=""></textarea>
                                   </div>
-                                  <div class="form-group">
-                                    <input type="file" name="image" placeholder="File"
-                                              required=""/> 
-                                  </div>
+
 
                                   <div class="form-group mb-0">
-                                    <button type="submit" class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit"><span>Submit</span></button>
+                                    <button type="submit" class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit"><span>UPDATE</span></button>
                                   </div>
                                 </form>    
                             </div>
@@ -58,7 +55,7 @@
 					<div class="row">
 		                <div class="col-lg-6 mb-5 pt-3">
 		                    <div class="media tm-testimonial">
-                                <img class="mr-4 rounded-circle img-fluid" src="img/testimonial-1.jpg" alt="Generic placeholder image">
+                                <img class="mr-4 rounded-circle img-fluid" src="/img/testimonial-1.jpg" alt="Generic placeholder image">
                                 <p class="media-body pt-3 tm-testimonial-text">
                                     Vestibulum non lectus id lacus aliquet porttitor in non nulla. Aenean urna diam, finibys id lorem nec, feugiat convallis dolor. Integer aliquam, eros eget rutrum iaculis.    
                                 </p>                              
@@ -66,7 +63,7 @@
 		                </div>
 		                <div class="col-lg-6 mb-5 pt-3">
                               <div class="media tm-testimonial">
-                              <img class="mr-4 rounded-circle img-fluid" src="img/testimonial-2.jpg" alt="Generic placeholder image">
+                              <img class="mr-4 rounded-circle img-fluid" src="/img/testimonial-2.jpg" alt="Generic placeholder image">
                               <p class="media-body pt-3 tm-testimonial-text">
                                 Maecenas et libero in eros laoreet finibus sed vitae diam. Etiam consetetur, nunc sed pretium elementum, diam erat fringilla tortor, placerat condimentum.
                               </p>
@@ -74,7 +71,7 @@
                         </div>
                         <div class="col-lg-6 mb-5 pt-3">
                             <div class="media tm-testimonial">
-                              <img class="mr-4 rounded-circle img-fluid" src="img/testimonial-3.png" alt="Generic placeholder image">
+                              <img class="mr-4 rounded-circle img-fluid" src="/img/testimonial-3.png" alt="Generic placeholder image">
                               <p class="media-body pt-3 tm-testimonial-text">
                                 Aliquam tristique ut magna sit amet tincidunt. Sed tempor tellus nulla, molestie luctus lectus tincidunt id. Cras duismod leo a urna placerat, vel blandit turpis fermentum.
                               </p>
@@ -82,7 +79,7 @@
                         </div>
                         <div class="col-lg-6 mb-5 pt-3">
                             <div class="media tm-testimonial">
-                              <img class="mr-4 rounded-circle img-fluid" src="img/testimonial-4.png" alt="Generic placeholder image">
+                              <img class="mr-4 rounded-circle img-fluid" src="/img/testimonial-4.png" alt="Generic placeholder image">
                               <p class="media-body pt-3 tm-testimonial-text">
                                 Nulla suscipit posuere lectus ut venenatis. Proin sed orci eget tellus euismod vulputate eu eu arcu. Etiam a bibendum lorem. Cura
                               </p>
