--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -5,7 +5,7 @@
                         <div class="col-7 col-md-4">
                             <a href="/" class="tm-bg-black text-center tm-logo-container">
                                 <i class="fas fa-video tm-site-logo mb-3"></i>
-                                <h1 class="tm-site-name">Video Catalog</h1>
+                                <h1 class="tm-site-name">Photo Catalog</h1>
                             </a>
                         </div>
                         <div class="col-5 col-md-8 ml-auto mr-0">
@@ -25,10 +25,10 @@
                                                 <a class="nav-link tm-nav-link" href="#">Videos <span class="sr-only">(current)</span></a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link tm-nav-link" href="about.html">About</a>
+                                                <a class="nav-link tm-nav-link" href="/about">About</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link tm-nav-link" href="/contact">Contact</a>
+                                                <a class="nav-link tm-nav-link" href="/add">Add Photo</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -40,7 +40,6 @@
             </div>
             <div class="tm-welcome-container text-center text-white">
                 <div class="tm-welcome-container-inner">
-                    <p class="tm-welcome-text mb-1 text-white">Video Catalog is brought to you by TemplateMo.</p>
                     <p class="tm-welcome-text mb-5 text-white">This is a full-width video banner.</p>
                     <a href="#content" class="btn tm-btn-animate tm-btn-cta tm-icon-down">
                         <span>Discover</span>
