--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -6,7 +6,45 @@
 
 /</div>
 
-           			
+		<!-- Page content -->
+		<main>
+			<div class="container-fluid px-0">
+				<div class="mx-auto tm-content-container">					
+					<div class="row mt-3 mb-5 pb-3">
+						<div class="col-12">
+							<div class="mx-auto tm-about-text-container px-3">
+								<h2 class="tm-page-title mb-4 tm-text-primary">Add Photo</h2>
+                
+							</div>							
+						</div>						
+					</div>
+                    <div class="mx-auto pb-3 tm-about-text-container px-3">
+                        <div class="row">
+                            <div class="col-lg-12 mb-5">
+
+
+                                <form action="/photos" method="POST" enctype="multipart/form-data" class="tm-contact-form">
+                                  <div class="form-group">
+                                    <input type="text" name="title" class="form-control rounded-0" placeholder="Photo Title" required="" />
+                                  </div>
+                                  <div class="form-group">
+                                    <textarea rows="8" name="description" class="form-control rounded-0" placeholder="Description"
+                                              required=""></textarea>
+                                  </div>
+                                  <div class="form-group">
+                                    <input type="file" name="image" placeholder="File"
+                                              required=""/> 
+                                  </div>
+
+                                  <div class="form-group mb-0">
+                                    <button type="submit" class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit"><span>Submit</span></button>
+                                  </div>
+                                </form>    
+                            </div>
+                                </div>
+                            </div>
+                        </div>  
+                    </div>                                      			
 				</div>
 
 				<div class="parallax-window parallax-window-2" data-parallax="scroll" data-image-src="img/contact-2.jpg"></div>
